# anilist-push

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: anilist.rs  config.rs  main.rs  notifications.rs  pushover.rs
