[package]
name = "anilist-push"
version = "1.0.0"
edition = "2021"
authors = ["isolume <nerd@isolu.me>"]
license = "MIT"
repository = "https://github.com/isolume/anilist-push"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
anyhow = "1.0.95"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }