[package]
name = "anilist-push"
version = "1.0.3"
edition = "2021"
authors = ["isolume <nerd@isolu.me>"]
license = "MIT"
repository = "https://github.com/isolume/anilist-push"
description = "Simple CLI application to fetch AniList notifications and send them over Pushover."

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.95"
serde_json = "1.0.138"