[package]
name = "anilist-push"
version = "2.0.0"
edition = "2021"
authors = ["isolume <nerd@isolu.me>"]
license = "MIT"
repository = "https://github.com/isolume/anilist-push"
description = "Simple CLI application to fetch AniList notifications and send them over Pushover."

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.97"
serde_json = "1.0.140"
confy = "0.6.1"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }